# NanoApps-MAC-iPod

./: .gitignore  LICENSE  README.md  start
apps/: Makefile
apps/benchmark/: Info.plist  Makefile  benchmark.c  img_demo_widgets_avatar.c
apps/books/: Info.plist  Makefile  books.c
apps/breakout/: Info.plist  Makefile  breakout.c
apps/calculator/: Info.plist  Makefile  calculator.c
apps/calendar/: Info.plist  Makefile  calendar.c
apps/chess/: Info.plist  Makefile  chess.c
apps/clock/: Info.plist  Makefile  clock.c
apps/connect4/: Info.plist  Makefile  connect4.c
apps/contacts/: Info.plist  Makefile  contacts.c
apps/countdown/: Info.plist  Makefile  countdown.c
apps/crosswords/: Info.plist  Makefile  crosswords.c
apps/dictionary/: Info.plist  Makefile  dictionary.c
sdk/: gl.c  gl.h  hb_app.ld  hb_app.mk  hb_app_api.h  hb_app_bundle.c  hb_app_bundle.h  hb_audio.c  hb_blob_mem.c  hb_brightness.c  hb_compositor.c  hb_compositor.h  hb_confirm.c  hb_confirm.h  hb_font.c  hb_fs.c  hb_gl_surface.c  hb_gl_surface.h  hb_glyph.c  hb_glyph.h  hb_gpu.c  hb_gpu.h  hb_heap.c  hb_heap.h  hb_image.c  hb_lv_surface.c  hb_lv_surface.h  hb_lv_trace.h  hb_lvgl_inttypes.h  hb_lvgl_limits.h  hb_media.c  hb_mipi.c  hb_orientation.c  hb_prefs.c  hb_prefs.h  hb_raw_surface.c  hb_raw_surface.h  hb_record.c  hb_record.h  hb_reloc.c  (+32 more)
tools/: build_apps.py  gen_glyph_bitmaps.py  mkapp.py  mkrelocapp.py  recsplit.py
tools/dependencies/silverutil/: Cargo.toml
tools/dependencies/silverutil/docs/: silverdb.ksy
tools/dependencies/silverutil/src/cli/: Cargo.toml
(+139 files in other folders)
