[package]
name = "silverlib"
version = "0.1.0"
edition = "2021"
# Build with the Rust shipped by current stable distros (e.g. Raspberry Pi OS).
# Newer image releases (0.25.10+) raise their MSRV to 1.88; the lockfile is
# resolved MSRV-aware so the whole dependency graph stays buildable here.
rust-version = "1.85"

[dependencies]
byteorder = "1.5"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png"]}
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"

[workspace]
members = ["src/cli"]
# When using `cargo run`, we'd prefer silverutil itself to be executed.
default-members = ["src/cli"]